--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
-  - {name: 🇯🇵 日本-2.87MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.59MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇨🇳 中国-8.11MB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
+  - {name: 🇨🇳 中国-1.56MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-547.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: ed8a43ac-b02b-4026-a101-f4df7c35e480, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
+  - {name: 🇨🇦 加拿大-2.87MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-3.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-2.93MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇸🇬 新加坡-556.7KB/s(Youtube:不良林), server: 194.124.35.40, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-552.2KB/s(Youtube:不良林), server: 194.124.35.40, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇷🇺 俄罗斯联邦-487.9KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 塞浦路斯-639.7KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-547.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-552.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-487.9KB/s(Youtube:不良林)
       - 塞浦路斯-639.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-547.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-552.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-487.9KB/s(Youtube:不良林)
       - 塞浦路斯-639.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-547.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-552.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-487.9KB/s(Youtube:不良林)
       - 塞浦路斯-639.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-547.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-552.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-487.9KB/s(Youtube:不良林)
       - 塞浦路斯-639.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-547.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-552.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-487.9KB/s(Youtube:不良林)
       - 塞浦路斯-639.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-547.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-552.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-487.9KB/s(Youtube:不良林)
       - 塞浦路斯-639.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-547.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-556.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-552.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-487.9KB/s(Youtube:不良林)
       - 塞浦路斯-639.7KB/s(Youtube:不良林)
 rules:
